# words2digits

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  annotated.html  args_8h_source.html  classcore_1_1forward__token__iterator__t-members.html  classcore_1_1forward__token__iterator__t.html  classcore_1_1input__token__iterator__t-members.html  classcore_1_1input__token__iterator__t.html  classcore_1_1token__stream__t-members.html  classcore_1_1token__stream__t.html  classcore_1_1token__view__t-members.html  classcore_1_1token__view__t.html  classes.html  classtoken__sequence__t-members.html  classtoken__sequence__t.html  classtoken__stream__t-members.html  classtoken__stream__t.html  digitize_8h_source.html  dir_23545742337c26c9c59192b4bd1f7081.html  dir_23bbe726552f53c285737af0b39faa29.html  dir_425ed44fb7b2513194ffe625b79125ae.html  dir_6e65d24a29b6768d65595dff4541e918.html  dir_706afa7bc43368ef1b184da5e1f6521f.html  dir_8ab27e576d7f279f02083cf469ce2c44.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_c92c42a1d82118dc53d9a5a56654cc3a.html  dir_fe650f687211457f63f5b186c08a74f1.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  grammar_8h_source.html  hierarchy.html  index.html  menudata.js  run_8h_source.html  structargs__t-members.html  (+12 more)
cmake/: CMakeLists.txt
cmake/cli/: CMakeLists.txt
cmake/corelib/: CMakeLists.txt
cmake/tests/: CMakeLists.txt
coverage/: index.cli_src_args.cpp.html  index.cli_src_run.cpp.html  index.corelib_include_core_grammar.h.html  index.corelib_include_core_token_stream.h.html  index.corelib_src_digitize.cpp.html  index.corelib_src_grammar.cpp.html  index.corelib_src_token_stream.cpp.html  index.html  index.include_grammar.h.html  index.include_token_stream.h.html  index.src_digitize.cpp.html  index.src_grammar.cpp.html  index.src_token_stream.cpp.html
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  pages_0.js  related_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
source/cli/include/: args.h  digitize.h  grammar.h  run.h  token_stream.h
source/cli/src/: args.cpp  digitize.cpp  grammar.cpp  main.cpp  run.cpp  token_stream.cpp
source/cli/test/: test_grammar.cpp  test_run.cpp  test_token_stream.cpp
source/corelib/include/core/: digitize.h  grammar.h  token_stream.h
source/corelib/include/digitize/: token_stream.h
source/corelib/src/: digitize.cpp  grammar.cpp  token_stream.cpp
source/corelib/test/: test_grammar.cpp  test_run.cpp  test_token_stream.cpp  test_tokenize.cpp
source/unittest/include/: unittest.h
source/unittest/src/: main.cpp
tools/: grammar.py
